Extra alignment fix

--- a/src/app/components/app-layout/app-layout.component.scss
+++ b/src/app/components/app-layout/app-layout.component.scss
@@ -178,6 +178,9 @@
     align-items: center;
     margin-left: auto;
     margin-right: 24px;
+    @include media-breakpoint-down(sm) {
+      margin-left: 0px;
+    }
 
     h4 {
       margin: 0 15px 0 0;
